# Copyright (c) 9-7-2024 Cummins Inc
# 
# This program and the accompanying materials are made
# available under the terms of the Eclipse Public License 2.0
# which is available at https://www.eclipse.org/legal/epl-2.0/
# 
# SPDX-License-Identifier: EPL-2.0
cmake_minimum_required(VERSION 3.5)

add_subdirectory(test-can-translator-client)

set(CMAKE_CXX_OUTPUT_EXTENSION_REPLACE ON)
